--- a/lab10/composer.json
+++ b/lab10/composer.json
@@ -1,6 +1,7 @@
 {
     "require": {
         "smarty/smarty": "^4.1",
-        "envms/fluentpdo": "^2.2"
+        "envms/fluentpdo": "^2.2",
+        "vlucas/phpdotenv": "^5.4"
     }
 }
