--- a/lab10/composer.json
+++ b/lab10/composer.json
@@ -1,13 +1,13 @@
 {
     "require": {
         "smarty/smarty": "^4.1",
-        "envms/fluentpdo": "^2.2",
-        "vlucas/phpdotenv": "^5.4",
         "symfony/config": "^6.1",
         "symfony/yaml": "^6.1",
         "symfony/routing": "^6.1",
         "symfony/http-foundation": "^6.1",
-        "symfony/http-kernel": "^6.1"
+        "symfony/http-kernel": "^6.1",
+        "symfony/dotenv": "^6.1",
+        "illuminate/database": "^9.20"
     },
     "autoload": {
         "psr-4": {
