--- a/lab10/config/routes.yml
+++ b/lab10/config/routes.yml
@@ -1,19 +1,19 @@
 product_index:
     path: /product
-    controller: App\Controller\ProductController::index
+    controller: App\Controllers\ProductController::index
 
 product_show:
     path: /product/{id}
-    controller: App\Controller\ProductController::show
+    controller: App\Controllers\ProductController::show
 
 cart_index:
     path: /cart
-    controller: App\Controller\CartController::index
+    controller: App\Controllers\CartController::index
 
 auth_index:
     path: /auth
-    controller: App\Controller\AuthController::index
+    controller: App\Controllers\AuthController::index
 
 search:
     path: /search
-    controller: App\Controller\SearchController::search
+    controller: App\Controllers\SearchController::search
