--- a/lab10/config/routes.yml
+++ b/lab10/config/routes.yml
@@ -16,4 +16,4 @@ auth_index:
 
 search:
     path: /search
-    controller: App\Controllers\SearchController::search
+    controller: App\Controllers\SearchController::index
