--- a/lab10/package.json
+++ b/lab10/package.json
@@ -1,7 +1,10 @@
 {
   "devDependencies": {
     "babel-loader": "^8.2.5",
+    "cross-env": "^7.0.3",
     "css-loader": "^6.7.1",
+    "laravel-mix": "^6.0.49",
+    "node-sass": "^7.0.1",
     "style-loader": "^3.3.1",
     "webpack": "^5.73.0",
     "webpack-cli": "^4.10.0"
@@ -11,7 +14,12 @@
     "@algolia/autocomplete-theme-classic": "^1.7.1"
   },
   "scripts": {
-    "build": "webpack --config webpack.config.js",
-    "watch": "webpack --watch --config webpack.config.js"
+    "dev": "npm run development",
+    "development": "mix",
+    "watch": "mix watch",
+    "watch-poll": "mix watch -- --watch-options-poll=1000",
+    "hot": "mix watch --hot",
+    "prod": "npm run production",
+    "production": "mix --production"
   }
 }
