--- a/lab10/package.json
+++ b/lab10/package.json
@@ -4,8 +4,12 @@
     "cross-env": "^7.0.3",
     "css-loader": "^6.7.1",
     "laravel-mix": "^6.0.49",
+    "laravel-mix-tailwind": "^0.1.2",
+    "less": "^4.1.3",
+    "less-loader": "^11.0.0",
     "node-sass": "^7.0.1",
     "style-loader": "^3.3.1",
+    "tailwindcss": "^3.1.6",
     "webpack": "^5.73.0",
     "webpack-cli": "^4.10.0"
   },
