--- a/lab10/composer.json
+++ b/lab10/composer.json
@@ -7,7 +7,9 @@
         "symfony/http-foundation": "^6.1",
         "symfony/http-kernel": "^6.1",
         "symfony/dotenv": "^6.1",
-        "illuminate/database": "^9.20"
+        "illuminate/database": "^9.20",
+        "ext-pdo": "*",
+        "ext-json": "*"
     },
     "autoload": {
         "psr-4": {
