--- a/lab10/composer.json
+++ b/lab10/composer.json
@@ -9,11 +9,15 @@
         "symfony/dotenv": "^6.1",
         "illuminate/database": "^9.20",
         "ext-pdo": "*",
-        "ext-json": "*"
+        "ext-json": "*",
+        "ext-curl": "*"
     },
     "autoload": {
         "psr-4": {
             "App\\": "app/"
-        }
+        },
+        "files": [
+            "app/Helpers/MainHelpers.php"
+        ]
     }
 }
