--- a/lab10/mix-manifest.json
+++ b/lab10/mix-manifest.json
@@ -9,5 +9,8 @@
     "/dist/images/test5.jpg": "/dist/images/test5.jpg",
     "/dist/images/test6.jpg": "/dist/images/test6.jpg",
     "/dist/images/test7.jpg": "/dist/images/test7.jpg",
-    "/dist/images/test8.jpg": "/dist/images/test8.jpg"
+    "/dist/images/test8.jpg": "/dist/images/test8.jpg",
+    "/dist/images/f8d42beb1a662f8c59944f106fb397a7d91a23ca.jpg": "/dist/images/f8d42beb1a662f8c59944f106fb397a7d91a23ca.jpg",
+    "/dist/images/2.jpg": "/dist/images/2.jpg",
+    "/dist/images/2a7623ec154676db097bc7f7985a7cfd1cdb67de.jpg": "/dist/images/2a7623ec154676db097bc7f7985a7cfd1cdb67de.jpg"
 }
