--- a/lab10/mix-manifest.json
+++ b/lab10/mix-manifest.json
@@ -1,6 +1,9 @@
 {
     "/dist/js/app.js": "/dist/js/app.js",
     "/dist/css/app.css": "/dist/css/app.css",
+    "/dist/images/2.jpg": "/dist/images/2.jpg",
+    "/dist/images/2a7623ec154676db097bc7f7985a7cfd1cdb67de.jpg": "/dist/images/2a7623ec154676db097bc7f7985a7cfd1cdb67de.jpg",
+    "/dist/images/f8d42beb1a662f8c59944f106fb397a7d91a23ca.jpg": "/dist/images/f8d42beb1a662f8c59944f106fb397a7d91a23ca.jpg",
     "/dist/images/logo.png": "/dist/images/logo.png",
     "/dist/images/test1.jpg": "/dist/images/test1.jpg",
     "/dist/images/test2.jpg": "/dist/images/test2.jpg",
